# LibreMotion_Capture

./: Instrucciones.txt  LICENSE.txt  README.md  ResumencitoTemporal.txt  initialConfig.json
LibreriaTelemetria/: settings.gradle
LibreriaTelemetria/AARTelemetria/: build.gradle  consumer-rules.pro
LibreriaTelemetria/AARTelemetria/src/main/: AndroidManifest.xml
LibreriaTelemetria/AARTelemetria/src/main/java/io/github/migueldulu/telemetria/: AyudanteHttp.java
Unity_Implementation/: README_Unity.md
Unity_Implementation/Scripts/: TelemetriaBootstrap.cs
Unreal_Implementation/: README_Unreal.md
Unreal_Implementation/Plugins/Telemetry/: Telemetry.uplugin
Unreal_Implementation/Plugins/Telemetry/Source/Telemetry/: Telemetry.Build.cs  Telemetry_APL.xml
Unreal_Implementation/Plugins/Telemetry/Source/Telemetry/Private/: Telemetry.cpp  TelemetryComponent.cpp
Unreal_Implementation/Plugins/Telemetry/Source/Telemetry/Public/: TelemetryComponent.h
cpp/: AndroidUploader.cpp  AndroidUploader.h  C3DRecorder.cpp  C3DRecorder.h  CMakeLists.txt  GestorTelemetria.cpp  GestorTelemetria.h  TelemetriaAPI.cpp  TelemetriaAPI.h  TelemetryAPI.cpp  TelemetryAPI.h  TelemetryManager.cpp  TelemetryManager.h  TiposTelemetria.h  TiposVR.h  configReader.cpp  configReader.h
cpp/build-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
